--- a/downloads.html
+++ b/downloads.html
@@ -26,7 +26,9 @@
           <p class="file-name">Quran mubaaraathuga baiveri vumah edhey form</p>
           <p class="file-size">24 MB</p>
         </div>
-        <a href="./path/to/logo.png" download class="download-button">Download</a>
+        <a href="logo.png" download class="download-btn">Download
+            <i class="fa fa-download"></i>
+        </a>
       </div>
       <div class="download-item">
         <img src="png.png" alt="Image Icon" class="file-icon">
@@ -34,7 +36,9 @@
           <p class="file-name">Assembly table</p>
           <p class="file-size">2.5 MB</p>
         </div>
-        <a href="./path/to/students.png" download class="download-button">Download</a>
+        <a href="students.png" download class="download-button">Download
+            <i class="fa fa-download"></i>
+        </a>
       </div>
 
       <!-- Add more files as needed -->
