--- a/downloads.html
+++ b/downloads.html
@@ -26,7 +26,7 @@
           <p class="file-name">Quran mubaaraathuga baiveri vumah edhey form</p>
           <p class="file-size">24 MB</p>
         </div>
-        <a href="logo.png" download class="download-btn">Download</a>
+        <a href="banner.png" download class="download-btn">Download</a>
       </div>
       <div class="download-item">
         <img src="png.png" alt="Image Icon" class="file-icon">
@@ -34,7 +34,7 @@
           <p class="file-name">Assembly table</p>
           <p class="file-size">2.5 MB</p>
         </div>
-        <a href="students.png" download class="download-button">Download</a>
+        <a href="./students.jpg" download class="download-button">Download</a>
       </div>
 
       <!-- Add more files as needed -->
