--- a/downloads.html
+++ b/downloads.html
@@ -26,7 +26,7 @@
           <p class="file-name">Quran mubaaraathuga baiveri vumah edhey form</p>
           <p class="file-size">24 MB</p>
         </div>
-        <a href="banner.png" download class="download-btn">Download</a>
+        <a href="./banner.png" download class="download-button">Download</a>
       </div>
       <div class="download-item">
         <img src="png.png" alt="Image Icon" class="file-icon">
