--- a/downloads.html
+++ b/downloads.html
@@ -23,8 +23,8 @@
       <div class="download-item">
         <img src="pdf-file.png" alt="PDF Icon" class="file-icon">
         <div class="file-info">
-          <p class="file-name">Quran mubaaraathuga baiveri vumah edhey form</p>
-          <p class="file-size">24 MB</p>
+          <p class="file-name">Badminton Mubaaraathugai baiveri vumah edhi husha alhaa form</p>
+          <p class="file-size">28 MB</p>
         </div>
         <a href="./banner.png" download class="download-button">Download</a>
       </div>
