--- a/downloads.html
+++ b/downloads.html
@@ -21,20 +21,28 @@
   <main>
     <div class="downloads-section">
       <div class="download-item">
-        <img src="pdf-file.png" alt="PDF Icon" class="file-icon">
+        <img src="png.png" alt="PDF Icon" class="file-icon">
         <div class="file-info">
-          <p class="file-name">Badminton Mubaaraathugai baiveri vumah edhi husha alhaa form</p>
-          <p class="file-size">28 MB</p>
+          <p class="file-name">Arabiyya School ge Dharivarun</p>
+          <p class="file-size">149 KB</p>
         </div>
-        <a href="./banner.png" download class="download-button">Download</a>
+        <a href="./students.jpg" download class="download-button">Download</a>
       </div>
       <div class="download-item">
         <img src="png.png" alt="Image Icon" class="file-icon">
         <div class="file-info">
-          <p class="file-name">Assembly table</p>
-          <p class="file-size">2.5 MB</p>
+          <p class="file-name">School Logo</p>
+          <p class="file-size">14 KB</p>
         </div>
-        <a href="./students.jpg" download class="download-button">Download</a>
+        <a href="./logo.png" download class="download-button">Download</a>
+      </div>
+      <div class="download-item">
+        <img src="audio.png" alt="MP4 Icon" class="file-icon">
+        <div class="file-info">
+          <p class="file-name">School Song</p>
+          <p class="file-size">4 MB</p>
+        </div>
+        <a href="./school-song.mp4" download class="download-button">Download</a>
       </div>
 
       <!-- Add more files as needed -->
