--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
   <header>
-        <img src="logo.png" alt="Arabiyya Logo (needs permission)" class="logo">
+        <img src="./logo.png" alt="Arabiyya Logo (needs permission)" class="logo">
     <div>
       <a href="./info">މަޢުލޫމާތު</a>
       <a href="./news">ޚަބަރު</a>
@@ -20,7 +20,7 @@
 
   <main>
     <div class="main-section section-divider">
-      <img src="banner.png" alt="Banner Image" class="banner">
+      <img src="./banner.png" alt="Banner Image" class="banner">
     </div>
 
     <div class="main-section section-divider">
@@ -30,12 +30,12 @@
 
     <div class="main-section section-divider">
       <div class="employee">
-        <img src="teacher.png" alt="Employee Photo">
+        <img src="./teacher.png" alt="Employee Photo">
         <p>މުވައްޒަފުން: 100</p>
       </div>
 
       <div class="student">
-        <img src="student-icon.png" alt="Student Photo">
+        <img src="./student-icon.png" alt="Student Photo">
         <p>ދަރިވަރުން: 500</p>
       </div>
     </div>
