--- a/downloads.html
+++ b/downloads.html
@@ -3,9 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="logo.png" type="image/x-icon">
   <link rel="stylesheet" href="styles.css">
+  <script src="script.js" defer></script>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap">
-  <title>Downloads</title>
+  <title>އަލްމަދްރަސަތުލް ޢަރަބިއްޔަތުލް އިސްލާމިއްޔާ | ޑައުންލޯޑްސް</title>
 </head>
 <body>
 
