--- a/50-years-countdown.html
+++ b/50-years-countdown.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="logo.png" type="image/x-icon">
   <link rel="stylesheet" href="styles.css">
   <script src="script.js" defer></script>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap">
-  <link rel="stylesheet" href="Numberfont.otf">
-  <title>Golden Jubilee Countdown</title>
+  <title>އަލްމަދްރަސަތުލް ޢަރަބިއްޔަތުލް އިސްލާމިއްޔާ | ރަން 50</title>
 </head>
 <body>
 
