--- a/50-years-countdown.html
+++ b/50-years-countdown.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" href="logo.png" type="image/x-icon">
+  <link rel="icon" href="https://i.postimg.cc/mkmZt15D/logo.png" type="image/x-icon">
   <link rel="stylesheet" href="styles.css">
   <script src="script.js" defer></script>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap">
@@ -12,7 +12,7 @@
 <body>
 
   <header>
-        <img src="logo.png" alt="Arabiyya Logo (needs permission)" class="logo">
+        <img src="https://i.postimg.cc/mkmZt15D/logo.png" alt="Arabiyya Logo (needs permission)" class="logo">
     <div>
        <a href="./info">މަޢުލޫމާތު</a>
        <a href="./news">ޚަބަރު</a>
